--- a/AppImageBuilder.yml
+++ b/AppImageBuilder.yml
@@ -9,6 +9,54 @@ AppDir:
     version: latest
     exec: DAISY/daisy
     exec_args: $@
+  apt:
+    arch: amd64
+    sources:
+      - sourceline: 'deb [arch=amd64] http://archive.ubuntu.com/ubuntu/ bionic main restricted universe multiverse'
+        key_url: 'http://keyserver.ubuntu.com/pks/lookup?op=get&search=0x3b4fe6acc0b21f32'
+      - sourceline: 'deb [arch=amd64] http://archive.ubuntu.com/ubuntu/ bionic-updates main restricted universe multiverse'
+      - sourceline: 'deb [arch=amd64] http://archive.ubuntu.com/ubuntu/ bionic-backports main restricted universe multiverse'
+    include:
+      - libqtcore4
+      - libqtgui4
+      - libqt4-opengl
+    exclude:
+      - fontconfig
+      - fontconfig-config
+      - fonts-dejavu-core
+      - libavahi-client3
+      - libavahi-common-data
+      - libavahi-common3
+      - libcups2
+      - libfontconfig1
+      - libfreetype6
+      - libice6
+      - libjbig0
+      - libjpeg-turbo8
+      - libjpeg8
+      - liblcms2-2
+      - libmng2
+      - libmysqlclient20
+      - libqt4-dbus
+      - libqt4-declarative
+      - libqt4-network
+      - libqt4-script
+      - libqt4-sql
+      - libqt4-sql-mysql
+      - libqt4-xml
+      - libqt4-xmlpatterns
+      - libqtdbus4
+      - libsm6
+      - libtiff5
+      - libxi6
+      - libxrender1
+      - libxt6
+      - mysql-common
+      - qdbus
+      - qt-at-spi
+      - qtchooser
+      - qtcore4-l10n
+      - x11-common
   files:
     include:
     - /usr/lib/x86_64-linux-gnu/libQtCore.so.4*
