--- a/AppImageBuilder.yml
+++ b/AppImageBuilder.yml
@@ -1,7 +1,7 @@
 # appimage-builder recipe see https://appimage-builder.readthedocs.io for details
 version: 1
 AppDir:
-  path: /home/faris/Projects/daisy-appimage/AppDir
+  path: ~/daisy-appimage/AppDir
   app_info:
     id: daisy
     name: daisy
